mobile text-align fix

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   }
   .par {
     margin-right: 2rem;
+    text-align: left;
   }
   .sub, .sub2 {
     margin-right: 2rem;
